--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-  <%= link_to 'login', new_user_session_path %>
+  <% if user_signed_in? %>
+    <%= link_to 'logout', destroy_user_session_path, method: 'DELETE' %>
+  <% else %>
+    <%= link_to 'login', new_user_session_path %>
+  <% end %>
 
   <%= yield %>
 
